--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -14,6 +14,9 @@
         <array key="AvenirNext.ttc">
             <string>AvenirNext-Medium</string>
         </array>
+        <array key="pokeFont.ttf">
+            <string>PokemonSolidNormal</string>
+        </array>
     </customFonts>
     <scenes>
         <!--Poke CollectionVC-->
@@ -26,9 +29,36 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3pb-N4-wN8">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pokedex" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0nZ-Nf-euR">
+                                        <rect key="frame" x="124" y="27" width="126" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="Jus-VM-px4"/>
+                                            <constraint firstAttribute="width" constant="126" id="QOi-c4-7yl"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="PokemonSolidNormal" family="Pokemon Solid" pointSize="26"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jrd-Y6-9CT">
+                                        <rect key="frame" x="341" y="31" width="26" height="26"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="26" id="MZf-0b-4gk"/>
+                                            <constraint firstAttribute="width" constant="26" id="V0p-N7-vUH"/>
+                                        </constraints>
+                                        <state key="normal" image="music"/>
+                                        <connections>
+                                            <action selector="musicBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lto-2L-Gcq"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
                                 <color key="backgroundColor" red="0.74711489835492229" green="0.22569095887804946" blue="0.22569095887804946" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="65" id="MdK-L7-7qN"/>
+                                    <constraint firstAttribute="trailing" secondItem="Jrd-Y6-9CT" secondAttribute="trailing" constant="8" id="NeZ-5t-kSm"/>
+                                    <constraint firstAttribute="bottom" secondItem="Jrd-Y6-9CT" secondAttribute="bottom" constant="8" id="VPA-Vy-MpL"/>
+                                    <constraint firstAttribute="bottom" secondItem="0nZ-Nf-euR" secondAttribute="bottom" constant="8" id="gWH-EQ-QAh"/>
+                                    <constraint firstItem="0nZ-Nf-euR" firstAttribute="centerX" secondItem="3pb-N4-wN8" secondAttribute="centerX" id="ntv-vF-rFE"/>
                                 </constraints>
                             </view>
                             <searchBar contentMode="redraw" text="" translatesAutoresizingMaskIntoConstraints="NO" id="2Bv-3y-8Ti">
@@ -123,5 +153,6 @@
     <resources>
         <image name="4" width="120" height="120"/>
         <image name="bg" width="1920" height="1200"/>
+        <image name="music" width="100" height="100"/>
     </resources>
 </document>
