--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -31,10 +31,9 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pokedex" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0nZ-Nf-euR">
-                                        <rect key="frame" x="124" y="27" width="126" height="30"/>
+                                        <rect key="frame" x="137.5" y="27" width="99" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="Jus-VM-px4"/>
-                                            <constraint firstAttribute="width" constant="126" id="QOi-c4-7yl"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="PokemonSolidNormal" family="Pokemon Solid" pointSize="26"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -61,7 +60,7 @@
                                     <constraint firstItem="0nZ-Nf-euR" firstAttribute="centerX" secondItem="3pb-N4-wN8" secondAttribute="centerX" id="ntv-vF-rFE"/>
                                 </constraints>
                             </view>
-                            <searchBar contentMode="redraw" text="" translatesAutoresizingMaskIntoConstraints="NO" id="2Bv-3y-8Ti">
+                            <searchBar contentMode="redraw" text="" placeholder="Search Pokemon.." translatesAutoresizingMaskIntoConstraints="NO" id="2Bv-3y-8Ti">
                                 <rect key="frame" x="0.0" y="65" width="375" height="56"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="56" id="jqM-YU-XoL"/>
@@ -143,6 +142,7 @@
                     </view>
                     <connections>
                         <outlet property="pokeCollection" destination="bqb-XA-baE" id="gPi-SJ-Yze"/>
+                        <outlet property="searchBar" destination="2Bv-3y-8Ti" id="5qu-PI-WUa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
